--- a/.github/workflows/dockerHub.yml
+++ b/.github/workflows/dockerHub.yml
@@ -27,7 +27,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/malubululle:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/malubullule:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
