--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,6 @@
+repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  sha: 5bf6c09bfa1297d3692cadd621ef95f1284e33c0
+  rev: 5bf6c09bfa1297d3692cadd621ef95f1284e33c0
   hooks:
     - id: trailing-whitespace
     - id: check-json
@@ -12,17 +13,17 @@
     - id: check-symlinks
     - id: check-json
 - repo: https://github.com/awebdeveloper/pre-commit-prettier
-  sha: "55702ab9f48cd9edb063b1516bbdd16bde14af32"
+  rev: "55702ab9f48cd9edb063b1516bbdd16bde14af32"
   hooks:
     - id: prettier
       additional_dependencies:
-        - "prettier@1.1.0"
+        - "prettier@1.9.0"
 - repo: https://github.com/pre-commit/mirrors-eslint
-  rev: "v7.30.0"
+  rev: "v6.8.0"
   hooks:
     - id: eslint
 - repo: https://github.com/awebdeveloper/pre-commit-stylelint
-  sha: "f792d6b33f0673991b8c044b5bb3bcae0399ada5"
+  rev: "f792d6b33f0673991b8c044b5bb3bcae0399ada5"
   hooks:
     - id: stylelint
       additional_dependencies:
