--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-analytics": "^5.22.1",
+    "vue-gtag": "^1.16.1",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
   },
