--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "node-fetch": "^2.6.1",
     "vue": "^2.6.11",
     "vue-gtag": "^1.16.1",
     "vuetify": "^2.4.0",
