Adds meta infos

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-fetch": "^2.6.1",
     "vue": "^2.6.11",
     "vue-gtag": "^1.16.1",
+    "vue-head": "^2.2.0",
     "vue-router": "^3.0.3",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
