--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "core-js": "^3.16.1",
     "node-fetch": "^2.6.1",
     "vue": "^2.6.11",
     "vue-gtag": "^1.16.1",
     "vue-router": "^3.0.3",
-    "vuetify": "^2.4.0",
+    "vuetify": "^2.5.8",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -24,11 +24,11 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-loader": "^2.2.1",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vuetify": "~2.4.1",
+    "vue-cli-plugin-vuetify": "^2.4.2",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
   },
